[gd_scene load_steps=4 format=3 uid="uid://ddifaup4bj5g2"]

[ext_resource type="Script" path="res://scripts/default_job.gd" id="1_tau5b"]
[ext_resource type="Texture2D" uid="uid://5kpvp55lb4jo" path="res://assets/icon.svg" id="2_quwx4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2gkc"]
size = Vector2(18.6667, 18.3333)

[node name="DefaultJob" type="Node2D"]
script = ExtResource("1_tau5b")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_quwx4")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_y2gkc")

[connection signal="mouse_entered" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2D" to="." method="_on_static_body_2d_mouse_exited"]
